arrow button gray

--- a/css/main.css
+++ b/css/main.css
@@ -3017,7 +3017,7 @@ html.ss-loaded .hero-content {
   margin:5px;
 }
 
-button.splide__arrows:hover{
+button.splide__arrow:hover{
   background-color: #848484;
 }
 
