--- a/css/main.css
+++ b/css/main.css
@@ -1009,6 +1009,21 @@ input[type="button"].btn--primary:focus {
   border-color: #000000;
 }
 
+.hero-contact-button{
+  background: #ffffff00;
+  border-color: #ffffff;
+  color: #ffffff;
+  border-style: solid;
+  border-radius: 8px;
+  padding:20px;
+  font-size:2rem;
+}
+
+.hero-contact-button:hover{
+  background: #d4b1adff;
+  border-color: #d4b1adff;
+}
+
 /* button modifiers
  * ------------------------------------------------- */
 .btn.h-full-width,
@@ -1994,7 +2009,7 @@ input::-moz-focus-inner {
   font-weight: 400;
   line-height: 1.257;
   padding-right: 3.2rem;
-  margin-bottom: 12rem;
+  margin-bottom: 6rem;
   color: #ffffff;
   position: relative;
 }
