--- a/css/main.css
+++ b/css/main.css
@@ -1018,6 +1018,13 @@ input[type="button"].btn--primary:focus {
   padding:20px;
   font-size:2rem;
 }
+@media screen and (max-width:400px) {
+  .hero-contact-button{
+    font-size:1.5rem;
+  }
+}
+
+
 
 .hero-contact-button:hover{
   background: #d4b1adff;
@@ -1994,7 +2001,7 @@ input::-moz-focus-inner {
 }
 
 .hero-content {
-  height: 100%;
+  height: 90%;
   max-width: 1400px;
   -ms-flex-align: end;
   -webkit-box-align: end;
